[gd_scene load_steps=8 format=2]

[ext_resource path="res://base_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/PixelifySans/static/PixelifySans-Medium.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/fonts/PixelifySans/static/PixelifySans-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/StageCompleteMenu.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.00784314, 0, 0.341176, 1 )
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -129.5
margin_right = 129.5
theme = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_top = 148.0
margin_right = 259.0
margin_bottom = 256.0
size_flags_vertical = 4
custom_styles/panel = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
margin_right = 259.0
margin_bottom = 108.0
size_flags_vertical = 4
custom_constants/separation = 10
alignment = 1

[node name="StageComplete" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_right = 259.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0.592157, 0, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "STAGE COMPLETE"
align = 1

[node name="Time" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 259.0
margin_bottom = 69.0
custom_fonts/font = SubResource( 2 )
text = "Your time was xx:xx.xxx"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 259.0
margin_bottom = 108.0

[node name="NextStage" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 118.0
margin_bottom = 29.0
focus_neighbour_right = NodePath("../MainMenu")
text = "Next Stage"
flat = true

[node name="Spacer" type="Control" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 122.0
margin_right = 151.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="MainMenu" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 155.0
margin_right = 259.0
margin_bottom = 29.0
focus_neighbour_left = NodePath("../NextStage")
text = "Main menu"
flat = true

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/NextStage" to="." method="_on_NextStage_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/HBoxContainer/MainMenu" to="." method="_on_MainMenu_pressed"]
